mdapi/objects/ValidationController__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ExecuteAccountValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteCaseValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteContactValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteLeadValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteOpportunityValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Validation Controller</label>
</CustomObject>